grammar.js
        program: $ => seq(
            repeat($.prql),
            repeat(
                choice(
                    $.pipeline,
                    $.function_definition,
                    $.variable,
                ),
            ),
        ),

        keyword_from: _ => make_keyword("from"),
        keyword_filter: _ => make_keyword("filter"),
        keyword_derive: _ => make_keyword("derive"),
        keyword_sort: _ => make_keyword("sort"),
        keyword_take: _ => make_keyword("take"),
        keyword_join: _ => make_keyword("join"),
        keyword_select: _ => make_keyword("select"),
        keyword_true: _ => make_keyword("true"),
        keyword_switch: _ => make_keyword("switch"),
        keyword_side: _ => make_keyword("side"),
        keyword_left: _ => make_keyword("left"),
        keyword_func: _ => make_keyword("func"),
        keyword_prql: _ => make_keyword("prql"),
        keyword_version: _ => make_keyword("version"),
        keyword_target: _ => make_keyword("target"),

        prql: $ => seq(
            $.keyword_prql,
            choice(
                seq(
                    $.keyword_version,
                    ":",
                    field("version", alias($._double_quote_string, $.literal)),
                ),
                seq(
                    $.keyword_target,
                    ":",
                    field("target", $.target),
                ),
            ),
        ),

        target: $ => choice(
            "sql.ansi",
            "sql.bigquery",
            "sql.clickhouse",
            "sql.generic",
            "sql.hive",
            "sql.mssql",
            "sql.mysql",
            "sql.postgres",
            "sql.sqlite",
            "sql.snowflake",
            "sql.duckdb",
        ),
        pipeline: $ => seq(
            choice(
                $.from,
                $.from_text,
            ),
            optional($.transforms),
        ),

        function_definition: $ => seq(
            $.keyword_func,
            field("name", $.identifier),
            repeat1($.parameter),
            "->",
            field("logic", choice($.binary_expression, $.s_string)),
        ),

        parameter: $ => choice(
            $.identifier,
            seq($.identifier, ":", field("default", $.literal)),
        ),

        transforms: $ => repeat1(
            choice(
                $.derives,
                $.sorts,
                $.takes,
                $.joins,
                $.filter,
                $.select,
                $.aggregate,
                $.group,
            ),
        ),

        from: $ => seq(
            $.keyword_from,
            $.term,
        ),

        derives: $ => seq(
            $.keyword_derive,
            choice(
                $.term,
                $.assignment,
                $.binary_expression,
                sq_bracket_list(
                    choice(
                        $.term,
                        $.binary_expression,
                        seq('(', $.binary_expression, ')'),
                    ),
                    false
                ),
            )
        ),

        filter: $ => seq(
            $.keyword_filter,
            $._boolean_expression,
            // TODO: (age | in 25..40)
        ),

        _boolean_expression: $ => seq(
            choice(
                parens(field("predicate", $._expression)),
                field("predicate", $._expression),
            ),
        ),

        switch: $ => seq(
            $.keyword_switch,
            sq_bracket_list(repeat1($.switch_condition)),
        ),

        switch_condition: $ => seq(
            choice(
                $.binary_expression,
                field("default", $.literal),
            ),
            "->",
            field("result", $.literal),
            ',',
        ),

        sorts: $ => seq(
            $.keyword_sort,
            choice(
                sq_bracket_list(
                    seq(
                        optional(
                            $.direction,
                        ),
                        $.term,
                    ),
                    false
                ),
                seq(
                    optional(
                        $.direction,
                    ),
                    $.term,
                ),
            ),
        ),

        direction: $ => prec.left (
            choice(
                '-',
                '+',
            ),
        ),

        takes: $ => seq(
            $.keyword_take,
            choice(
                alias($._natural_number, $.literal),
                $.range
            )
        ),

        joins: $ => seq(
            $.keyword_join,
            seq(
                optional($._join_definition),
                $.term,
                optional($.conditions),
            ),
        ),

        _join_definition: $ => seq(
            seq($.keyword_side, ":"),
            choice(
                $.keyword_inner,
                $.keyword_left,
                $.keyword_right,
                $.keyword_full,
            ),
        ),

        conditions: $ => choice(
            sq_bracket_list($.binary_expression, false),
            $._self_join,
        ),

        _self_join: $ => seq(
            '[',
            '==',
            $.term,
            ']',
        ),


        select: $ => seq(
            $.keyword_select,
            $.table_reference,
        ),

        term: $ => prec(3,
            seq(
                choice(
                    field("value", $._expression),
                    field("value", $.assignment),
                    $._double_quote_string,
                    $.f_string,
                    $.s_string,
                ),
            ),
        ),

        _expression: $ => prec(2,prec.left(
            choice(
                $.field,
                $._double_quote_string,
                $.f_string,
                $.s_string,
                $.date,
                $.time,
                $.timestamp,
                $.binary_expression,
                parens($.binary_expression),
                $.literal,
            ),
        )),

        literal: $ => prec(2,
            choice(
                $._integer,
                $._decimal_number,
                $._literal_string,
                $.keyword_true,
                $.keyword_false,
                $.keyword_null,
            ),
        ),

        f_string: $ => choice(
            $._double_f_string,
            $._triple_f_string,
        ),

        s_string: $ => choice(
            $._double_s_string,
            $._triple_s_string,
        ),

        _double_quote_string: _ => seq('"', /[^"]*/, '"'),

        _double_f_string: _ => seq('f"', /[^"]*/, '"'),
        _triple_f_string: $ => seq('f"""', $._inner_triple_quotes, '"""'),
        _double_s_string: _ => seq('s"', /[^"]*/, '"'),
        _triple_s_string: $ => seq('s"""', $._inner_triple_quotes, '"""'),

        _literal_string: $ => prec(1,
            choice(
                seq("'", /[^']*/, "'"),
                $._double_quote_string,
            ),
        ),

        _natural_number: _ => /\d+/,
        _integer: $ => seq(optional("-"), $._natural_number),
        _decimal_number: $ => prec.left(
            choice(
                seq(optional("-"), ".", $._natural_number),
                seq($._integer, ".", $._natural_number),
                seq($._integer, "."),
            ),
        ),

        field: $ => prec(1,
            seq(
                optional(
                    seq(
                        field('table', $._alias_identifier),
                        '.',
                    ),
                ),
                field('name', $.identifier),
            ),
        ),

        _alias_identifier : $ => choice(
            $.identifier,
            alias($._double_quote_string, $.identifier),
        ),

        identifier: _ => /([a-zA-Z_][0-9a-zA-Z_]*)/,

        assignment: $ => choice(... [
            ['=', 'alias_assignment'],
        ].map(([operator, range_prec]) =>
            prec.left(range_prec, choice(
                seq(
                    field('alias', $._expression),
                    field('operator', operator),
                    field('operation', seq(
                        optional(
                            choice(
                                $.keyword_average,
                                $.keyword_sum,
                            ),
                      ),
                      $._expression),
                    ),
                ),
                seq(
                    field('alias', $._expression),
                    field('operator', operator),
                    choice(
                        field('operator', $.function_call),
                        parens(field('operator', $.function_call)),
                    ),
                ),
                seq(
                    field('alias', $._expression),
                    field('operator', operator),
                    field('operator', $.switch),
                ),
                seq(
                    field('alias', $._expression),
                    field('operator', operator),
                    parens(
                    field('operation', seq(
                        optional(
                            choice(
                                $.keyword_average,
                                $.keyword_sum,
                            ),
                      ),
                      $._expression),
                    ),
                    ),
                ),
            ),
        ))),

        binary_expression: $ => choice(
          ...[
            ['+', 'binary_plus'],
            ['-', 'binary_plus'],
            ['*', 'binary_times'],
            ['/', 'binary_times'],
            ['|', 'binary_pipe'],
            ['==', 'binary_relation'],
            ['!=', 'binary_relation'],
            ['>', 'binary_relation'],
            ['>=', 'binary_relation'],
            ['<', 'binary_relation'],
            ['<=', 'binary_relation'],
            ['??', 'coalesce'],
          ].map(([operator, precedence]) =>
            prec.left(precedence, seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression)
            ))
          ),
          ...[
            [$.keyword_and, 'clause_connective'],
            [$.keyword_or, 'clause_disjunctive'],
          ].map(([operator, precedence]) =>
            prec.left(precedence, choice(
                seq(
                    field('left', $._expression),
                    field('operator', operator),
                    field('right', $._expression),
                ),
                seq(
                    '(',
                    field('left', $._expression),
                    field('operator', operator),
                    field('right', $._expression),
                    ')',
                ),
            ),
          ),
        ),
        ),

        _date: _ => seq(
            /\d{4}/,
            '-',
            /\d{1,2}/,
            '-',
            /\d{1,2}/,
        ),
        date: $ => seq(
            '@',
            $._date,
        ),

        _time: $ => seq(
            /\d{2}/,
            optional(
                seq(
                    ':',
                    /\d{1,2}/,
                ),
            ),
            optional(
                seq(
                    ':',
                    /\d{1,2}/,
                ),
            ),
            optional(
                seq(
                    '.',
                    $._integer,
                ),
            ),
        ),

        time: $ => seq(
            '@',
            $._time,
        ),

        timestamp: $ => prec.right(seq(
            '@',
            $._date,
            'T',
            $._time,
            optional($.timezone),
        ),
        ),

        timezone: $ => choice(
            'Z',
            seq(
                $.direction,
                /\d{1,2}/,
            ),
        ),
