test/corpus/append.txt
================================================================================
Append
================================================================================

from employees_1
append employees_2

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (identifier))
    (transforms
      (append
        (keyword_append)
        (identifier)))))

================================================================================
Remove
================================================================================

from employees_1
append employees_2

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (identifier))
    (transforms
      (append
        (keyword_append)
        (identifier)))))

================================================================================
Intersect
================================================================================

from employees_1
intersect employees_2

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (identifier))
    (transforms
      (append
        (keyword_intersect)
        (identifier)))))
