test/corpus/filter.txt
================================================================================
Single filter
================================================================================

from employees
filter age > 25

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (identifier))
    (transforms
      (filter
        (keyword_filter)
        (binary_expression
          (field
            (identifier))
          (literal
            (integer)))))))

================================================================================
Multiple filter
================================================================================

from employees
filter (age > 25 || department != "IT")
filter (age > 25 && department != "IT")

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (identifier))
    (transforms
      (filter
        (keyword_filter)
        (binary_expression
          (binary_expression
            (field
              (identifier))
            (literal
              (integer)))
          (binary_expression
            (field
              (identifier))
            (literal
              (literal_string)))))
      (filter
        (keyword_filter)
        (binary_expression
          (binary_expression
            (field
              (identifier))
            (literal
              (integer)))
          (binary_expression
            (field
              (identifier))
            (literal
              (literal_string))))))))
